# agent-skill-forge

./: .gitignore  README.md  pyproject.toml
skill_forge/: __main__.py  agent.py  cli.py  code_generator.py  config.py  prompts.py  sandbox.py  skill_creator.py  skill_loader.py
skills/code-executor/: SKILL.md  skill_code.py
skills/example_todo/: SKILL.md
skills/factorial-calculator/: SKILL.md  skill_code.py
skills/math-calculator/: SKILL.md
skills/skills-searcher/: SKILL.md  skill_code.py
skills/square-root-calculator/: SKILL.md
skills/square-root-explainer/: SKILL.md
skills/weather-info/: SKILL.md
